--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
           </div>
         </div>
       </div>
+      <div class="features-section">
+        <div class="features-intro">
+          <h1>Features</h1>
+          <p>
+            Our aim is to make quick and easy for you to access your favourite
+            websites. Your bookmarks sync between your devices so you can access
+            them on the go.
+          </p>
+        </div>
+        <ul class="three-criterias">
+          <li><strong>Simple Bookmarking</strong></li>
+          <li><strong>Speedy Searching</strong></li>
+          <li><strong>Easy Sharing</strong></li>
+        </ul>
+        <div class="explaination">
+          <div class="explaination-image">
+            <div class="actual-image2">
+              <img src="./images/illustration-features-tab-1.svg" alt="" />
+            </div>
+            <div class="blue2"></div>
+          </div>
+          <div class="explaination-description">
+            <h1>Bookmark in one click</h1>
+            <p>
+              Organize your bookmarks however you like. Our simple drag-and-drop
+              interface gives you complete control over how you manage your
+              favourite sites.
+            </p>
+            <button>More Info</button>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
